[gd_scene load_steps=22 format=2]

[ext_resource path="res://assets/images/gui/buildings/panel.png" type="Texture" id=1]
[ext_resource path="res://src/SlaveMarket.gd" type="Script" id=2]
[ext_resource path="res://assets/images/gui/buildings/buttonpanel.png" type="Texture" id=3]
[ext_resource path="res://assets/images/gui/buildings/buttonhl.png" type="Texture" id=4]
[ext_resource path="res://assets/images/gui/buildings/buttonpress.png" type="Texture" id=5]
[ext_resource path="res://assets/images/gui/buildings/button.png" type="Texture" id=6]
[ext_resource path="res://assets/images/backgrounds/market.png" type="Texture" id=7]
[ext_resource path="res://assets/images/sprites/goblinmerc2.png" type="Texture" id=8]
[ext_resource path="res://src/Clickable_Sprite.gd" type="Script" id=9]
[ext_resource path="res://assets/images/gui/exclamation.png" type="Texture" id=10]
[ext_resource path="res://assets/images/gui/taskmenu/workerpanel.png" type="Texture" id=11]
[ext_resource path="res://assets/images/gui/menu/linebutton.png" type="Texture" id=12]
[ext_resource path="res://assets/images/gui/menu/linebuttonpressed.png" type="Texture" id=13]
[ext_resource path="res://assets/images/gui/menu/linebuttonhl.png" type="Texture" id=14]
[ext_resource path="res://assets/images/gui/goblin.png" type="Texture" id=15]
[ext_resource path="res://assets/images/gui/inventory/itemicon1.png" type="Texture" id=16]
[ext_resource path="res://assets/images/iconsitems/Wood.png" type="Texture" id=17]
[ext_resource path="res://assets/images/iconsitems/gold.png" type="Texture" id=18]

[sub_resource type="StyleBoxTexture" id=1]
texture = ExtResource( 4 )
region_rect = Rect2( 0, 0, 293, 79 )

[sub_resource type="StyleBoxTexture" id=2]
texture = ExtResource( 5 )
region_rect = Rect2( 0, 0, 293, 80 )

[sub_resource type="StyleBoxTexture" id=3]
texture = ExtResource( 6 )
region_rect = Rect2( 0, 0, 293, 79 )

[node name="SlaveMarket" type="TextureRect"]
margin_left = 35.0
margin_top = 54.0
margin_right = 1826.0
margin_bottom = 984.0
texture = ExtResource( 1 )
script = ExtResource( 2 )

[node name="ButtonPanel" type="TextureRect" parent="."]
margin_left = 120.0
margin_top = 23.0
margin_right = 542.0
margin_bottom = 689.0
texture = ExtResource( 3 )

[node name="PurchaseButton" type="Button" parent="ButtonPanel"]
margin_left = 63.0
margin_top = 252.0
margin_right = 356.0
margin_bottom = 331.0
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/normal = SubResource( 3 )
text = "PURCHASE"

[node name="SellButton" type="Button" parent="ButtonPanel"]
margin_left = 63.0
margin_top = 332.0
margin_right = 356.0
margin_bottom = 411.0
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/normal = SubResource( 3 )
text = "SELL"

[node name="Label" type="Label" parent="ButtonPanel"]
margin_left = 78.0
margin_top = 159.0
margin_right = 336.0
margin_bottom = 183.0
text = "WORKERMARKET"
align = 1

[node name="BG" type="TextureRect" parent="."]
show_behind_parent = true
margin_left = 4.0
margin_top = 18.0
margin_right = 1768.0
margin_bottom = 915.0
mouse_filter = 2
texture = ExtResource( 7 )
expand = true
stretch_mode = 7

[node name="Sprite" type="TextureButton" parent="."]
show_behind_parent = true
margin_left = 1022.0
margin_top = -51.0
margin_right = 1770.0
margin_bottom = 926.0
texture_normal = ExtResource( 8 )
expand = true
stretch_mode = 5
script = ExtResource( 9 )
charname = "flak"

[node name="QuestActive" type="TextureRect" parent="Sprite"]
margin_left = 459.0
margin_top = 265.0
margin_right = 593.0
margin_bottom = 388.0
mouse_filter = 2
texture = ExtResource( 10 )

[node name="PurchaseMenu" type="TextureRect" parent="."]
visible = false
margin_left = 556.0
margin_top = 71.0
margin_right = 1205.0
margin_bottom = 859.0
texture = ExtResource( 11 )

[node name="ScrollContainer" type="ScrollContainer" parent="PurchaseMenu"]
margin_left = 69.0
margin_top = 108.0
margin_right = 560.0
margin_bottom = 730.0

[node name="VBoxContainer" type="VBoxContainer" parent="PurchaseMenu/ScrollContainer"]

[node name="Button" type="TextureButton" parent="PurchaseMenu/ScrollContainer/VBoxContainer"]
visible = false
margin_right = 470.0
margin_bottom = 90.0
rect_min_size = Vector2( 470, 90 )
texture_normal = ExtResource( 12 )
texture_pressed = ExtResource( 13 )
texture_hover = ExtResource( 14 )
expand = true

[node name="Icon" type="TextureRect" parent="PurchaseMenu/ScrollContainer/VBoxContainer/Button"]
margin_left = 6.0
margin_top = 7.0
margin_right = 81.0
margin_bottom = 82.0
texture = ExtResource( 15 )
expand = true

[node name="Label" type="Label" parent="PurchaseMenu/ScrollContainer/VBoxContainer/Button"]
margin_left = 97.0
margin_top = 33.0
margin_right = 313.0
margin_bottom = 57.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Goblin"

[node name="Cost" type="Label" parent="PurchaseMenu/ScrollContainer/VBoxContainer/Button"]
margin_left = 377.0
margin_top = 33.0
margin_right = 450.0
margin_bottom = 57.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "100"
align = 2

[node name="Label" type="Label" parent="PurchaseMenu"]
margin_left = 100.0
margin_top = 42.0
margin_right = 521.0
margin_bottom = 66.0
text = "Text"
align = 1

[node name="SellMenu" type="TextureRect" parent="."]
visible = false
margin_left = 1156.0
margin_top = 71.0
margin_right = 1805.0
margin_bottom = 859.0
texture = ExtResource( 11 )

[node name="ScrollContainer" type="ScrollContainer" parent="SellMenu"]
margin_left = 91.0
margin_top = 98.0
margin_right = 557.0
margin_bottom = 720.0
scroll_horizontal_enabled = false

[node name="VBoxContainer" type="GridContainer" parent="SellMenu/ScrollContainer"]
columns = 5

[node name="Button" type="TextureButton" parent="SellMenu/ScrollContainer/VBoxContainer"]
margin_right = 90.0
margin_bottom = 90.0
rect_min_size = Vector2( 90, 90 )
texture_normal = ExtResource( 16 )
expand = true

[node name="Icon" type="TextureRect" parent="SellMenu/ScrollContainer/VBoxContainer/Button"]
show_behind_parent = true
margin_left = 6.0
margin_top = 6.0
margin_right = 84.0
margin_bottom = 83.0
texture = ExtResource( 17 )
expand = true

[node name="Amount" type="Label" parent="SellMenu/ScrollContainer/VBoxContainer/Button"]
margin_left = 47.0
margin_top = 92.0
margin_right = 93.0
margin_bottom = 116.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "10"
align = 1

[node name="Gold" type="TextureRect" parent="SellMenu/ScrollContainer/VBoxContainer/Button"]
margin_left = -1.0
margin_top = 73.0
margin_right = 39.0
margin_bottom = 131.0
texture = ExtResource( 18 )
expand = true
stretch_mode = 6

